// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> renders label on left (snapshot) 1`] = `
.c8.c8.c8.c8.c8 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 4px;
  border-radius: 9999px;
  outline: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  background: transparent;
}

.c8.c8.c8.c8.c8::-webkit-slider-runnable-track {
  height: 4px;
  border-radius: 9999px;
  background: linear-gradient(to right,hsla(218,89%,51%,1) var(--slider-fill-pct,0%),hsla(206,10%,29%,0.12) var(--slider-fill-pct,0%));
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  margin-top: -8px;
  -webkit-transition: box-shadow 100ms ease;
  transition: box-shadow 100ms ease;
}

.c8.c8.c8.c8.c8::-moz-range-track {
  height: 4px;
  border-radius: 9999px;
  background: hsla(206,10%,29%,0.12);
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-moz-range-progress {
  height: 4px;
  border-radius: 9999px;
  background: hsla(218,89%,51%,1);
}

.c8.c8.c8.c8.c8::-moz-range-thumb {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  box-sizing: border-box;
}

.c8.c8.c8.c8.c8:focus-visible::-webkit-slider-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c8.c8.c8.c8.c8:focus-visible::-moz-range-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 0px;
  width: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  color: hsla(200,10%,18%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class="c0"
    data-blade-component="slider"
  >
    <label
      data-blade-component="form-label"
      for="slider-121-input-122"
      id="slider-121-label-126"
      style="width: 120px; flex-shrink: 0; margin-right: 12px;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
                letter-spacing="50"
              >
                Volume
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                  letter-spacing="50"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="c7"
      data-blade-component="base-box"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        aria-labelledby="slider-121-label-126"
        aria-required="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c8"
        id="slider-121-input-122"
        max="100"
        min="0"
        step="1"
        style="--slider-fill-pct: 0%;"
        type="range"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`<Slider /> renders large size (snapshot) 1`] = `
.c8.c8.c8.c8.c8 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 6px;
  border-radius: 9999px;
  outline: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  background: transparent;
}

.c8.c8.c8.c8.c8::-webkit-slider-runnable-track {
  height: 6px;
  border-radius: 9999px;
  background: linear-gradient(to right,hsla(218,89%,51%,1) var(--slider-fill-pct,0%),hsla(206,10%,29%,0.12) var(--slider-fill-pct,0%));
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  margin-top: -9px;
  -webkit-transition: box-shadow 100ms ease;
  transition: box-shadow 100ms ease;
}

.c8.c8.c8.c8.c8::-moz-range-track {
  height: 6px;
  border-radius: 9999px;
  background: hsla(206,10%,29%,0.12);
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-moz-range-progress {
  height: 6px;
  border-radius: 9999px;
  background: hsla(218,89%,51%,1);
}

.c8.c8.c8.c8.c8::-moz-range-thumb {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  box-sizing: border-box;
}

.c8.c8.c8.c8.c8:focus-visible::-webkit-slider-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c8.c8.c8.c8.c8:focus-visible::-moz-range-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  color: hsla(200,10%,18%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class="c0"
    data-blade-component="slider"
  >
    <label
      data-blade-component="form-label"
      for="slider-109-input-110"
      id="slider-109-label-114"
      style="width: 100%; flex-shrink: 0; margin-right: 0px;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
                letter-spacing="50"
              >
                Volume
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                  letter-spacing="50"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="c7"
      data-blade-component="base-box"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        aria-labelledby="slider-109-label-114"
        aria-required="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c8"
        id="slider-109-input-110"
        max="100"
        min="0"
        step="1"
        style="--slider-fill-pct: 0%;"
        type="range"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`<Slider /> renders medium size (snapshot) 1`] = `
.c8.c8.c8.c8.c8 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 4px;
  border-radius: 9999px;
  outline: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  background: transparent;
}

.c8.c8.c8.c8.c8::-webkit-slider-runnable-track {
  height: 4px;
  border-radius: 9999px;
  background: linear-gradient(to right,hsla(218,89%,51%,1) var(--slider-fill-pct,0%),hsla(206,10%,29%,0.12) var(--slider-fill-pct,0%));
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  margin-top: -8px;
  -webkit-transition: box-shadow 100ms ease;
  transition: box-shadow 100ms ease;
}

.c8.c8.c8.c8.c8::-moz-range-track {
  height: 4px;
  border-radius: 9999px;
  background: hsla(206,10%,29%,0.12);
  cursor: pointer;
}

.c8.c8.c8.c8.c8::-moz-range-progress {
  height: 4px;
  border-radius: 9999px;
  background: hsla(218,89%,51%,1);
}

.c8.c8.c8.c8.c8::-moz-range-thumb {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: hsla(0,0%,100%,1);
  border: 2px solid hsla(218,89%,51%,1);
  cursor: pointer;
  box-sizing: border-box;
}

.c8.c8.c8.c8.c8:focus-visible::-webkit-slider-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c8.c8.c8.c8.c8:focus-visible::-moz-range-thumb {
  outline: 4px solid hsla(218,89%,51%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  color: hsla(200,10%,18%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class="c0"
    data-blade-component="slider"
  >
    <label
      data-blade-component="form-label"
      for="slider-115-input-116"
      id="slider-115-label-120"
      style="width: 100%; flex-shrink: 0; margin-right: 0px;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class=""
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
                letter-spacing="50"
              >
                Volume
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                  letter-spacing="50"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="c7"
      data-blade-component="base-box"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        aria-labelledby="slider-115-label-120"
        aria-required="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c8"
        id="slider-115-input-116"
        max="100"
        min="0"
        step="1"
        style="--slider-fill-pct: 0%;"
        type="range"
        value="0"
      />
    </div>
  </div>
</div>
`;
